Objetivo 2 - Transacciones 1. Controlador 2. Vista

--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -101,21 +101,7 @@
                             <li class="nav-link">
                                 <a href="#">
                                     <i class='bx bx-money icon'></i>
-                                    <span class="text nav-text">Aportar</span>
-                                </a>
-                            </li>
-
-                            <li class="nav-link">
-                                <a href="#">
-                                    <i class='bx bx-table icon'></i>
-                                    <span class="text nav-text">Tabla de Aportacion</span>
-                                </a>
-                            </li>
-
-                            <li class="nav-link">
-                                <a href="#">
-                                    <i class='bx bx-window-close icon'></i>
-                                    <span class="text nav-text">Tabla de Multas</span>
+                                    <span class="text nav-text">Transacciones</span>
                                 </a>
                             </li>
                         }
