Objetivo 4 - Vistas. 1. Estilos y JS de las tablas de vistas.

--- a/act_Application/Views/TablaAportantes/Index.cshtml
+++ b/act_Application/Views/TablaAportantes/Index.cshtml
@@ -9,8 +9,8 @@
 <header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/General/Tablas/TablaAportaciones.css" />
-    <script src="~/js/Aportar/MsjAportar.js"> </script>
+    <link rel="stylesheet" href="/css/General/Tablas/T_Aportantes/T_Aportantes.css" />
+    <script src="~/js/General/Tablas/T_Aportantes/MSJ_TablAportantes.js"> </script>
 </header>
 <body>
     <div class="content-text">
