--- a/act_Application/Views/TablaMultados/Index.cshtml
+++ b/act_Application/Views/TablaMultados/Index.cshtml
@@ -8,8 +8,8 @@
 <header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="~/js/Multa/MsjMulta.js"> </script>
-    <link rel="stylesheet" href="/css/General/Tablas/TablaMultas.css" />
+    <script src="~/js/General/Tablas/T_Multados/MSJ_TablMultados.js"> </script>
+    <link rel="stylesheet" href="/css/General/Tablas/T_Multados/T_Multados.css" />
 </header>
 <body>
     <div class="content-text">
