Objetivo 4 - Vistas. 1. Cambios en el directorio Data por medio de Repository. 2. Bases para Vista de Notificaciones.

--- a/act_Application/Views/TablaAportantes/Index.cshtml
+++ b/act_Application/Views/TablaAportantes/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<act_Application.Models.BD.ActAportacione>;
 @using System.Globalization;
-@using act_Application.Data;
+@using act_Application.Data.Repository;
 @{
     ViewData["Title"] = "Tabla de Aportantes";
     bool condicion = new AportacionRepository().GetExistAportaciones();
