--- a/act_Application/Views/TablaMultados/Index.cshtml
+++ b/act_Application/Views/TablaMultados/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Globalization;
-@using act_Application.Data.Data;
+@using act_Application.Data.Repository;
 @model IEnumerable<act_Application.Models.BD.ActMulta>;
 @{
     ViewData["Title"] = "Tabla de Multados";
