--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -5,12 +5,11 @@
 @{
     ViewData["Title"] = "Notificaciones";
 
-    bool condicionAdmin = new NotificacionesRepository().GetExistNotificacionesAdmin();
     bool condicionUser = false;
     var userIdClaim = User.Claims.FirstOrDefault(c => c.Type == "Id");
     int IdUser = -1;
     if (userIdClaim != null && int.TryParse(userIdClaim.Value, out IdUser))
-        condicionUser = new NotificacionesRepository().GetExistNotificacionesUser(IdUser);
+        condicionUser = (bool) new NotificacionesRepository().OperacionesNotificaciones( 2, 0, IdUser);
     //Variables de Vista
     DateTime fechaActual = DateTime.Now;
     string fechaactual = fechaActual.ToString("yyyy-MM-dd");
@@ -30,7 +29,7 @@
         <h1>Notificaciones</h1>
         @if (User.HasClaim("Rol", "Administrador"))
         {
-            @if (condicionAdmin == true)
+            @if ((bool) new NotificacionesRepository().OperacionesNotificaciones( 1, 0, 0))
             {
                 <div class="content-notif">
                     @foreach (var notificacionAdmin in Model)
@@ -162,7 +161,7 @@
         {
             @if (!User.HasClaim("Rol", "Administrador") && (User.HasClaim("Rol", "Socio") || User.HasClaim("Rol", "Referido")))
             {
-                @if (condicionUser == true)
+                @if (condicionUser)
                 {
                     <div class="content-notif">
                         @foreach (var notificacionUser in Model)
