Objetivo 4 - Vistas. (MODO QA) 1. Correciones en la logica de Inicio de sesion 2. Correcion en Query de Notificaciones. 3. Correcion en Query de Aportaciones. 4. Modificacion  variables de vista Aportacion. 5. Correcion en Layout. 6. Correcion Variables MYSQl en AportacionesRepository

--- a/act_Application/Views/Login/CSE.cshtml
+++ b/act_Application/Views/Login/CSE.cshtml
@@ -10,4 +10,4 @@
     }, 5000); // 5000 milisegundos = 5 segundos
 </script>
 
-<p>No presentas ningun tipo de estado Conocido.</p>
+<p>No tienes una cuenta registrada, o  tuviste un problema al insertar credenciales.</p>
