--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -115,13 +115,13 @@
 
                         @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Socio"))
                         {
-                            <li class="nav-link hidden-item">
+                            <li class="nav-link">
                                 <a href="~/TablaAportantes/Index">
                                     <i class='bx bx-table icon'></i>
                                     <span class="text nav-text">Aportantes</span>
                                 </a>
                             </li>
-                            <li class="nav-link hidden-item">
+                            <li class="nav-link">
                                 <a href="~/TablaMultados/Index">
                                     <i class='bx bx-table icon'></i>
                                     <span class="text nav-text">Multados</span>
