--- a/act_Application/Views/TablaAportantes/Index.cshtml
+++ b/act_Application/Views/TablaAportantes/Index.cshtml
@@ -3,8 +3,6 @@
 @using act_Application.Data.Repository;
 @{
     ViewData["Title"] = "Tabla de Aportantes";
-    bool condicion = (bool) new AportacionRepository().OperacionesAportaciones(1, 0, 0);
-
 }
 <header>
     <meta charset="UTF-8">
@@ -17,7 +15,7 @@
         <h1>Tabla de Aportaciones</h1>
         <hr />
         <div class="table-container">
-            @if (condicion == true)
+            @if ((bool)new AportacionRepository().OperacionesAportaciones(1, 0, 0))
             {
                 <table class="aportacion-table">
                     <thead>
